[package]
name = "which-cmd"
version = "0.1.0"
edition = "2021"
authors = ["Elias Norrby"]
description = "A which-key inspired command builder with a terminal UI for discovering and composing shell commands interactively"
readme = "README.md"
repository = "https://github.com/eliasnorrby/which-cmd"
license = "MIT"
keywords = ["cli", "tui", "terminal", "commands", "which-key"]
categories = ["command-line-utilities", "command-line-interface"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
crossterm = "0.29"
console = "0.15"
clap = { version = "4.5", features = ["derive"] }
xdg = "2.5"
dialoguer = { version = "0.12", features = ["fuzzy-select"]}
thiserror = "1.0"
